# ylab_tasks

./: .gitignore  Makefile  README.md  dump.rdb  pyproject.toml
.github/workflows/: main.yml
tests/: test_lecture1.py  test_lecture2.py
ylab_tasks/: lecture1.py  lecture2.py
ylab_tasks/lecture2/: task1.py  task2.py
ylab_tasks/lecture3/: task1.py  task2.py  task3.py  task4.py
ylab_tasks/lecture3/task5/: heroes.py  main.py  news.py  places.py
