[tool.poetry]
name = "ylab"
version = "0.1.0"
description = ""
authors = ["SadLaboka <jitubuh@gmail.com>"]
packages = [
  { include = "ylab_tasks" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
